objects/Campaign.object
<CustomObject>
    <fields>
        <fullName>Download_Marketing_Material__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if this is a download campaign</description>
        <label>Download Marketing Material</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SQL_Type__c</fullName>
        <label>SQL Type</label>
        <picklist>
            <picklistValues>
                <fullName>Pro</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fin</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sales_Qualified_Lead__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Lead which can flip to New Lead status and go to sales</description>
        <inlineHelpText>Lead which can flip to New Lead status and go to sales</inlineHelpText>
        <label>Qualified Lead</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Welcome_Kit_Sent_Date__c</fullName>
        <description>Date Welcome Kit was mailed out for completion of Partner Quick Start.</description>
        <label>Welcome Kit Sent Date</label>
        <type>Date</type>
    </fields>
    <listViews>
        <fullName>AllActiveCampaigns</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All Active Campaigns</label>
    </listViews>
    <listViews>
        <fullName>MyActiveCampaigns</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CAMPAIGN.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Active Campaigns</label>
    </listViews>
    <sharingModel>FullAccess</sharingModel>
</CustomObject>